# github-portfolio-audit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  action.yml  pyproject.toml
.github/workflows/: audit.yml  ci.yml
scripts/: run-action.sh
src/portfolio_audit/: __init__.py  audit.py  cli.py  client.py  models.py  render.py
tests/: test_action.py  test_audit.py  test_cli.py  test_client.py  test_models.py  test_render.py
tests/fixtures/: github_api_stub.py
